# metrics-prediction-operator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/metrics_prediction_operator/: __init__.py  app.py  config.py  main.py  model.py  prediction_manager.py  prometheus.py
tests/: test_app.py  test_config.py  test_model.py  test_prometheus.py
